fixado o toggle do dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -166,32 +166,34 @@ nav{
     align-items: center;
 }
 
-.settings-menu .switch-lighter{
+.toggle-dark{
     align-self: flex-start;
-    position: relative;
-    width: 50px;
-    height: 20px;
-    border-radius: .7em;
-    background-color: #ccc;
 }
 
-.settings-menu .switch-lighter::after{
-    content: '';
+.toggle-dark input[type="checkbox"]{
+    -webkit-appearance: none;
+    background-color: #ccc;
+    /* box-shadow: inset 0 0 5px rgba(0, 0, 0, .6); */
+    width: 60px;
+    height: 20px;
+    border-radius: 1em;
+    position: relative;
+}
+
+.toggle-dark input[type="checkbox"]::before{
+    content: "";
+    position: absolute;
+    top: 12.5%;
+    left: 5%;
     width: 15px;
     height: 15px;
-    background-color: rgb(179, 96, 96);
-    border-radius: 50%;
-    position: absolute;
-    left: 5%;
-    top: 2.7px;
-}
-
-.settings-menu .switch-lighter:checked{
     background-color: white;
+    border-radius: 50%;
+    transition: .3s;
 }
 
-.settings-menu .switch-lighter:checked::after{
-    right: 5%;
+.toggle-dark input[type="checkbox"]:checked:before{
+    left: 70%;
     background-color: black;
 }
 
